Preflight: one call at boot that says whether the robot can be enabled
Everything it checks was already checkable, and checking all of it separately is
something nobody does. The failures it covers share a shape - the robot boots,
the dashboard connects, everything looks normal, and the problem surfaces at the
worst moment as something that does not resemble its cause.

The two JVM flags are the sharpest case: without them the robot starts perfectly
and dies on the first command a driver schedules, with a stack trace from inside
WPILib naming no class of theirs. A check at boot turns that into a line of text
before anyone has walked to the field.

Blockers are the three that will actually stop a robot: missing flags, a disk at
95%, and a battery below the machine's own brownout floor. Warnings are the ones
worth knowing and not worth stopping for - flash wear, a hot SoC, CAN contention.

It changes nothing and blocks nothing. A preflight that refused to let a robot
enable would eventually refuse during a match, and the team that hit that would
delete it. It reports; the decision stays with the people.

Twelve tests, over machines in states nobody can arrange on purpose. Two of them
are about wording rather than logic, and they are not decoration: summary() must
name the first thing to fix rather than counting problems, and every warning must
carry a detail - a warning with no detail is a warning nobody can act on. The hot
machine test asserts the text mentions loop overruns, because a thermal problem
that presents as a thermal problem is not the one that catches people.

Wired into the example, which is what teams copy, and onto the Driver Station
board beside the battery.

567 tests.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>